@@ -174,22 +174,23 @@
 		<Product type="0128" id="0000" name="ED2.0 Display"/>
 	</Manufacturer>
 	<Manufacturer id="0060" name="Everspring">
-		<Product type="0003" id="0001" name="AD142 Plug-in Dimmer Module"/>
-		<Product type="0104" id="0001" name="AN145 Lamp Screw In Module" config="everspring/an145.xml"/>
-		<Product type="0004" id="0002" name="AN158 Plug-in Meter Appliance Module" config="everspring/an158.xml"/>
-		<Product type="0004" id="0001" name="AN157 Plug-in Appliance Module"/>
-		<Product type="0010" id="0001" name="HAC01 In-wall Remote Module "/>
-		<Product type="000C" id="0001" name="SE812 Siren" config="everspring/se812.xml"/>
-		<Product type="000D" id="0001" name="SF812 Smoke Alarm" config="everspring/sf812.xml"/>
-		<Product type="0202" id="0001" name="SM103 Door/Window Sensor" config="everspring/sm103.xml"/>
-		<Product type="0002" id="0001" name="SM103 Door/Window Sensor" config="everspring/sm103.xml"/>
-		<Product type="0101" id="0001" name="SP103 PIR Motion Sensor" config="everspring/sp103.xml"/>
 		<Product type="0001" id="0001" name="HSP02 Motion Detector"/>
 		<Product type="0001" id="0002" name="SP814 Motion Detector" config="everspring/sp814.xml"/>
+		<Product type="0002" id="0001" name="SM103 Door/Window Sensor" config="everspring/sm103.xml"/>
+		<Product type="0003" id="0001" name="AD142 Plug-in Dimmer Module"/>
+		<Product type="0004" id="0001" name="AN157 Plug-in Appliance Module"/>
+		<Product type="0004" id="0002" name="AN158 Plug-in Meter Appliance Module" config="everspring/an158.xml"/>
 		<Product type="0006" id="0001" name="ST814 Temperature and Humidity Sensor" config="everspring/st814.xml"/>
 		<Product type="0007" id="0001" name="ST815 Illumination Sensor" config="everspring/st815.xml"/>
-		<Product type="000b" id="0001" name="ST812 Flood Detector"/>
 		<Product type="0009" id="0001" name="TSE03 Door Bell" config="everspring/tse03.xml"/>
+		<Product type="000b" id="0001" name="ST812 Flood Detector"/>
+		<Product type="000c" id="0001" name="SE812 Siren" config="everspring/se812.xml"/>
+		<Product type="000d" id="0001" name="SF812 Smoke Alarm" config="everspring/sf812.xml"/>
+		<Product type="0010" id="0001" name="HAC01 In-wall Remote Module"/>
+		<Product type="0011" id="0002" name="HAN02 In-wall Remote Module"/>
+		<Product type="0101" id="0001" name="SP103 PIR Motion Sensor" config="everspring/sp103.xml"/>
+		<Product type="0104" id="0001" name="AN145 Lamp Screw In Module" config="everspring/an145.xml"/>
+		<Product type="0202" id="0001" name="SM103 Door/Window Sensor" config="everspring/sm103.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0116" name="Chromagic Technologies Corporation">
 		<Product type="0001" id="0001" name="HSCP02 Motion Detector"/>
